--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,6 +10,7 @@
 <body>
     <section>
         <div class="div-prop">
+            <!--comment-->
             <h1>All About Me.</h1>
             <br>
             <a href="home.html">Learn More...</a>
