--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--link to the css file "styles.css"-->
     <link rel="stylesheet" href="css/styles.css">
     <title>Portfolio</title>
 </head>
 <body>
     <section>
         <div class="div-prop">
-            <!--comment-->
+            <!--Heading-->
             <h1>All About Me.</h1>
             <br>
+            <!--link as a button-->
             <a href="home.html">Learn More...</a>
         </div>
     </section> 
