--- a/portfolio/home.html
+++ b/portfolio/home.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- styles link "home-style.css"-->
     <link rel="stylesheet" href="css/home-style.css">
+    <!-- icons link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Home</title>
 </head>
@@ -13,6 +15,8 @@
         <h1>Welcome</h1>
         <div class="content-wrap grid-view">
             <nav>
+                <!-- link as a button plus an icon inside the link/button for all buttons -->
+                <!-- i element has two classes one for the the website one for the font name -->
                 <a href="personalinfo.html"><i class="fa fa-info"></i>Personal Info</a>
                 <a href="objectives.html"><i class="fa fa-male"></i>Objectives</a>
                 <a href="experience.html"><i class="fa fa-line-chart"></i>Experience</a>
@@ -23,6 +27,7 @@
                 <a href="languages.html"><i class="fa fa-comment"></i>Languages</a>
                 <a href="achievements.html"><i class="fa fa-certificate"></i>Achievements</a>
             </nav>
+            <!-- image on the right-->
             <img src="images/4.jpg" alt="person" width="400" 
             height="500">
         </div>
