--- a/portfolio/personalinfo.html
+++ b/portfolio/personalinfo.html
@@ -9,24 +9,25 @@
 </head>
 <body>
     <h1>Personal Information</h1>
-    <section>
+    <section> <!-------------------- body ---------------------->
         <img src="images/7.jpg" alt="image" width="400" 
-            height="500" class="float-left">
-            <!--Personal info details-->
+            height="500">
+            <!------------ Personal info details----------------->
             <div class="content-wrap">
-                <h2 class="border">Hi! My name is</h2>
+                <h2>Hi! My name is</h2>
                 <p><strong>Molefe Kgothatso Lebogang</strong> (Nice to meet you)</p>
-                <h3 class="border">I was born in</h3>
+                <h3>I was born in</h3>
                 <p><strong>1999/11/07</strong></p>
-                <h4 class="border no-space">My home address is</h4>
+                <h4>My home address is</h4>
                 <p><strong>1014 Mahwelereng zone 2</strong></p>
                 <br>
-                <h5 class="border no-space">If you would like to mail me, mail me at:</h5>
+                <h5>If you would like to mail me, mail me at:</h5>
                 <a href="mailto:molefe.kgothatso7@gmail.com">molefe.kgothatso7@gmail.com</a>
-                <h6 class="border no-space">Alternatively you can visit my linkedin at</h6>
+                <h6>Alternatively you can visit my linkedin at</h6>
                 <a href="https://www.linkedin.com/in/kgothatso-molefe-078a0020b/">linkedin</a>
             </div>
     </section>
+    <!---------------------- footer ---------------------->
     <footer>
         <nav>
             <a href="home.html" class="next">Back</a>
