--- a/portfolio/objectives.html
+++ b/portfolio/objectives.html
@@ -8,9 +8,12 @@
     <title>Objectives</title>
 </head>
 <body>
+    <!------------- Heading ---------------->
     <h1 class="box posiiton">Objectives</h1>
+    <!------------------------- body ------------------------------>
     <div class="box2 posiiton2"><strong> My goal is to become associated with a company where I can utilize my skills and gain further experience while enhancing the company’s productivity and reputation</strong></div>
 
+    <!------------------ footer ---------------------------------->
     <footer>
         <nav>
             <div class="box3 posiiton3">
@@ -21,6 +24,7 @@
         </nav>
     </footer>
     
+    <!----------------- background colors --------------------->
     <div class="div1 div-style"></div>
     <div class="div2 div-style"></div>
     <div class="div3 div-style"></div>
