--- a/portfolio/experience.html
+++ b/portfolio/experience.html
@@ -8,10 +8,12 @@
     <title>Experience</title>
 </head>
 <body>
+    <!----------------- Heading -------------------->
     <section class="right-align" >
         <h1 class="box posiiton">Experience</h1>
     </section>
 
+    <!---------------- body --------------------->
     <section class="right-align">
         <div class="box2 posiiton2">
             <ul>
@@ -27,6 +29,7 @@
         </div>
     </section>
 
+    <!----------------- footer ------------------>
     <section>
         <footer>
             <nav>
