--- a/portfolio/education.html
+++ b/portfolio/education.html
@@ -8,14 +8,17 @@
     <title>Education</title>
 </head>
 <body>
+    <!----------------- background sytling ------------->
     <section >
         <div class="div1 div-style"></div>
         <div class="div2 div-style"></div>
         <div class="div3 div-style"></div>
     </section>
+    <!------------ heading ---------->
     <section>
         <h1 class="box posiiton">Education</h1>
     </section>
+    <!------------------ body --------------------->
     <section class="section-style box2 posiiton2">
         <div class="content-wrap">
             <p>I completed my NSC in 2017</p>
@@ -33,6 +36,7 @@
             </ul>
         </div>
     </section>
+    <!---------------------- footer --------------------->
     <section>
         <footer>
             <nav>
