--- a/portfolio/skills.html
+++ b/portfolio/skills.html
@@ -8,10 +8,12 @@
     <title>Skills</title>
 </head>
 <body>
+    <!------------- heading --------------->
     <section class="right-align" >
         <h1 class="box posiiton">Skills</h1>
     </section>
 
+    <!--------------------- Body ----------------------->
     <section class="right-align">
         <div class="box2 posiiton2">
             <ul>
@@ -27,6 +29,7 @@
             </ul>
         </div>
     </section>
+    <!------------------- footer ------------------->
     <section>
         <footer>
             <nav>
