--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,6 +13,12 @@
         <div class="div-prop">
             <!--Heading-->
             <h1>All About Me.</h1>
+            <nav>
+              <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="education.html">About Me</a></li>
+              </ul>
+            </nav>
             <br>
             <!--link as a button-->
             <a href="home.html">Learn More...</a>
